Fixed CSS: Responsive footer - display hidden on small devices

--- a/style.css
+++ b/style.css
@@ -167,3 +167,8 @@ footer{
     position: absolute;
     bottom: 1rem;
 }
+@media screen and (max-width: 600px) {
+    footer{
+        display: none;
+    }
+}
